--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "1.0.0",
   "description": "Chop Chop is a lightweight frontend pattern primer.",
   "main": "gulpfile.js",
-  "repository": {
-    "type": "git",
-    "url": "git@gitlab.iweb.co.uk:labs/chopchop.git"
-  },
   "scripts": {
     "watch": "gulp",
     "watch-dev": "gulp --dev",
     "build": "gulp build",
     "build-production": "gulp build --production"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:getchopchop/chopchop.git"
   },
   "keywords": [
     "npm",
@@ -22,16 +22,15 @@
     "img",
     "fonts"
   ],
-  "author": "iWeb https://daveredfern.com",
+  "author": "Chop Chop https://github.com/getchopchop/chopchop/",
   "license": "MIT",
   "bugs": {
-    "url": "https://gitlab.iweb.co.uk/labs/chopchop/issues"
+    "url": "https://github.com/getchopchop/chopchop/issues"
   },
-  "homepage": "https://gitlab.iweb.co.uk/labs/chopchop/tree/master#README",
+  "homepage": "https://github.com/getchopchop/chopchop",
   "devDependencies": {
-    "browser-sync": "^2.10.0",
     "del": "^2.1.0",
-    "gulp": "^3.9.0",
+    "gulp": "github:gulpjs/gulp#4.0",
     "gulp-autoprefixer": "^3.0.2",
     "gulp-changed": "^1.3.0",
     "gulp-clip-empty-files": "^0.1.1",
@@ -39,12 +38,11 @@
     "gulp-cssnano": "^2.1.0",
     "gulp-imagemin": "^2.3.0",
     "gulp-jshint": "^2.0.0",
-    "gulp-plumber": "^1.0.1",
     "gulp-sass": "^2.1.0",
     "gulp-sourcemaps": "^1.6.0",
+    "gulp-svg-sprite": "^1.3.1",
     "gulp-uglify": "^1.4.2",
     "gulp-util": "^3.0.6",
-    "jshint": "^2.8.0",
-    "run-sequence": "^1.1.4"
+    "jshint": "^2.8.0"
   }
 }
